fix(core): do not hide nested scrollbars (#6645)

--- a/projects/core/components/root/root.style.less
+++ b/projects/core/components/root/root.style.less
@@ -33,7 +33,12 @@ tui-root {
 
 tui-root > .t-root-scrollbar {
     .fullsize(fixed, inset);
+    display: none;
     margin: 0;
+}
+
+[data-tui-theme] tui-root > .t-root-scrollbar {
+    display: block;
 }
 
 .t-root-content {
